# French-English_summary_generation

./: .gitignore  main.py  pyproject.toml
notebooks/: 00-Imports.ipynb  01-Load_dataset.ipynb  02-Split_dataset.ipynb  03-Clean_text_data.ipynb  04-Filter_sentence_length.ipynb  05-Remove_duplicates.ipynb  06-Smart_lowercase_conversion.ipynb  07-Limit_frequent_repetitions.ipynb  08-Training_and_evaluation.ipynb  09_Generate_evaluate_translations.ipynb  Imports.py  ImportsJupyter.py  s01_Load_dataset.py  s02_Split_dataset.py  s03_Clean_text_data.py  s04_Filter_sentence_length.py  s05_Remove_duplicates.py  s06_Smart_lowercase_conversion.py  s07_Limit_frequent_repetitions.py  s08.ipynb  s08.py  s08_Training.py
notebooks/.ipynb_checkpoints/: 00-Imports-checkpoint.py  01-Load_dataset-checkpoint.ipynb
