[project]
name = "french-english-summary-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==3.6.0",
    "fsspec>=2025.3.0",
    "huggingface-hub>=0.34.0,<1.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sacremoses>=0.1.1",
    "scikit-learn>=1.7.2",
    "sentencepiece>=0.2.1",
    "tokenizers>=0.14.1",
    "transformers[torch]>=4.36",
]

[dependency-groups]
dev = [
    "bpython>=0.26",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyterlab-pygments>=0.3.0",
    "uv>=0.9.7",
]
